libaria (2.7.5.2+repack-3) unstable; urgency=low

  * Removed statically linked library.
  * Corrected Multi-Arch config for the doc package.
  * Building python-ariapy package (SWIG generated bindings)
  * Building libaria-demo package
  * Added test target for dh_autotest.

 -- Srećko Jurić-Kavelj <srecko.juric-kavelj@fer.hr>  Wed, 12 Jun 2013 00:19:13 +0200

libaria (2.7.5.2+repack-2) unstable; urgency=low

  * libc6 dependency dropped
  * Converted to Multi-Arch

 -- Srećko Jurić-Kavelj <srecko.juric-kavelj@fer.hr>  Thu, 02 May 2013 18:41:11 +0200

libaria (2.7.5.2+repack-1) unstable; urgency=low

  * Initial release (Closes: #703357)
  * Repacked the original tarball to remove unnecesary non-source files.

 -- Srećko Jurić-Kavelj <srecko.juric-kavelj@fer.hr>  Sat, 30 Mar 2013 17:52:50 +0100