@@ -1,7 +1,8 @@
 Source: libaria
 Priority: extra
 Maintainer: Srećko Jurić-Kavelj <srecko.juric-kavelj@fer.hr>
-Build-Depends: debhelper (>= 9), doxygen, swig, python-dev
+Build-Depends: debhelper (>= 9), swig, python-dev
+Build-Depends-Indep: doxygen
 Standards-Version: 3.9.4
 Section: libs
 Homepage: http://robots.mobilerobots.com/wiki/ARIA
